--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -114,6 +114,13 @@
       <artifactId>testng</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
+
   </dependencies>
 
 </project>
